fix spacing

--- a/src/spaces/onboarding/pages/SignInPage/SignInPage.module.css
+++ b/src/spaces/onboarding/pages/SignInPage/SignInPage.module.css
@@ -179,6 +179,7 @@
   max-width: 600px;
   width: 100%;
   padding: 2rem;
+  padding-bottom: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
